--- a/Craveon/admin/template/base.html
+++ b/Craveon/admin/template/base.html
@@ -29,6 +29,7 @@
             <li class="nav-item"><a class="nav-link" href="{{url_for('admin.categories')}}"><i class="fas fa-layer-group me-2"></i> Manage Categories</a></li>
             <li class="nav-item"><a class="nav-link" href="{{url_for('admin.users')}}"><i class="fas fa-users me-2"></i> Manage Users</a></li>
             <li class="nav-item"><a class="nav-link" href="{{url_for('admin.sales')}}"><i class="fas fa-chart-line me-2"></i> Sales</a></li>
+            <li class="nav-item"><a class="nav-link" href="{{url_for('admin.reviews')}}"><i class="fas fa-star me-2"></i> Reviews</a></li>
         </ul>
         <hr>
         <ul class="nav flex-column">
